// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String    @id @default(uuid())
  name          String
  email         String?   @unique
  password      String?
  emailVerified DateTime? @map("email_verified")
  image         String?
  nickname      String?
  follower      Int?
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  accounts      Account[]
  sessions      Session[]
  video         Video[]
  comment       Comment[]
  post          Post[]
  love_log      Love_log[]

  @@map("users")
}

model Video {
  id            String   @id @default(cuid())
  title         String?
  description   String?
  thumbnail     String?
  type          Int?
  price_rent    Float?
  price_sell    Float?
  Love_count    Int?
  slug          String?  @unique
  path          String?  
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  OwnerUserID   String   @map("user_id")
  user          User     @relation(fields: [OwnerUserID], references: [id], onDelete: Cascade)
  comment       Comment[]
  post          Post[]
  love_log      Love_log[]

  @@map("videos")
}

model Comment {
  id          String   @id @default(cuid())
  comment     String?
  userId      String   @map("user_id")
  videoId     String   @map("video_id")
  Love_count  Int?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  love_log    Love_log[]

  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video     Video    @relation(fields: [videoId], references: [id], onDelete: Cascade)

  @@map("comments")
}

model Post {
  id          String   @id @default(cuid())
  content     String?
  userId      String   @map("user_id")
  videoId     String?  @map("video_id")
  Love_count  Int?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  love_log    Love_log[]

  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video     Video?   @relation(fields: [videoId], references: [id], onDelete: SetNull)

  @@map("Posts")
}

model Love_log {
  id          String   @id @default(cuid())
  userId      String   @map("user_id")
  videoId     String?  @map("video_id")
  postId      String?  @map("post_id")
  commentId   String?  @map("comment_id")
  type        Int?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  video     Video?   @relation(fields: [videoId], references: [id], onDelete: SetNull)
  post     Post?   @relation(fields: [postId], references: [id], onDelete: SetNull)
  comment     Comment?   @relation(fields: [commentId], references: [id], onDelete: SetNull)
}

model Account {
  id                String   @id @default(cuid())
  userId            String   @map("user_id")
  type              String?
  provider          String
  providerAccountId String   @map("provider_account_id")
  token_type        String?
  refresh_token     String?  @db.Text
  access_token      String?  @db.Text
  expires_at        Int?
  scope             String?
  id_token          String?  @db.Text
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt
  user              User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  userId       String?  @map("user_id")
  sessionToken String   @unique @map("session_token") @db.Text
  accessToken  String?  @map("access_token") @db.Text
  expires      DateTime
  user         User?    @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  @@map("sessions")
}

model VerificationRequest {
  id         String   @id @default(cuid())
  identifier String
  token      String   @unique
  expires    DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@unique([identifier, token])
}
